# forge

./: .containerignore  .env.example  .env.local  .gitignore  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LINKEDIN_POST.md
src/forge/: agent.py  api.py  cli.py  config.py  errors.py  graph.py  llm.py  logger.py  main.py  memory.py  orchestrator.py  ratelimit.py  trace.py  types.py
src/forge/graphs/: default.py  review.py
src/forge/providers/: llama_cpp.py  llm_provider.py  ollama.py  openrouter.py
src/forge/router/: __init__.py  grammar.py  parser.py  prompt.py
src/forge/static/: index.html
src/forge/tools/: chat.py  code.py  files.py  git.py  registry.py  router.py  shell.py
tests/: conftest.py  test_api.py  test_cli.py  test_files_and_review.py  test_grammar.py  test_graph.py  test_llm.py  test_memory.py  test_orchestrator.py  test_providers.py  test_registry.py  test_router.py  test_shell_git.py  test_tool_contract.py  test_trace.py
