[project]
name = "forge"
version = "3.3.0"
requires-python = ">=3.12"
dependencies = ["requests", "fastapi", "uvicorn[standard]"]

[project.scripts]
forge = "forge.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
